Fixed the screen alignment of days to go circle

--- a/css/creative.css
+++ b/css/creative.css
@@ -206,11 +206,9 @@ aside {
 
 .emblem {
   position: absolute;
-  display: block;
-  left: 0;
-  right: 0;
-  top: 18vh;
-  margin: 0 auto;
+  display: inline-block; 
+  right: 43.5%;
+  top: 31%;
   width: 27vh;
   height: 27vh;
   border-radius: 50%;
@@ -282,24 +280,28 @@ header .header-content {
 }
 header .header-content .header-content-inner h1 {
   font-weight: 700;
-  margin-top: 0;
-  /*margin-bottom: 100px;*/
-  /*  font-size: 30px;*/
+/*  margin-top: 0;
+  margin-bottom: 0;*/
 }
-header .header-content .header-content-inner h3 {
+header .header-content .header-content-inner .number{
   font-weight: 700;
-  margin-top: 60px;
+  margin-top: 5%;
+  left: 48.5%;
+  position: absolute;
 }
+/*header .header-content .header-content-inner h3 {
+  font-weight: 700;
+  margin-top: 9%;
+}*/
 header .header-content .header-content-inner hr {
-  /*margin: 30px auto;
-  margin-bottom: */
+  margin-top:29%;
 }
-header .header-content .header-content-inner p {
+/*header .header-content .header-content-inner p {
   font-weight: 300;
   color: rgba(255, 255, 255, 0.7);
   font-size: 16px;
   margin-bottom: 50px;
-}
+}*/
 @media (min-width: 768px) {
   header {
     min-height: 100%;
